# easydev

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/easydev/: array_tree.h  easydev.h  gather.h  seg_tree.h  zkw_tree.h
src/: CMakeLists.txt  easydev_main.cc  gather.cc
test/: CMakeLists.txt  array_tree_test.cc  fmt_test.cc  gather_test.cc  seg_tree_test.cc  zkw_tree_test.cc
